<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/swiperefreshlayout_table_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_button"
            android:textColor="@drawable/bg_text_select_black_blue" />

        <TextView
            android:id="@+id/swiperefreshlayout_table_scrollview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_scrollview"
            android:textColor="@drawable/bg_text_select_black_blue" />

        <TextView
            android:id="@+id/swiperefreshlayout_table_viewpager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_viewpager"
            android:textColor="@drawable/bg_text_select_black_blue" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_light_lv8" />

    <android.support.v4.view.ViewPager
        android:id="@+id/swiperefreshlayout_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:overScrollMode="never" />

</LinearLayout>
